@@ -1,19 +1,18 @@
 AUTHORS
 ChangeLog
-Gnome2.pm
-LICENSE
-MANIFEST
-MANIFEST.SKIP
-META.yml			Module meta-data in YAML
-Makefile.PL
-README
-TODO
 examples/druid.pl
 genmaps.pl
 gnome.typemap
+Gnome2.pm
 gnome2perl.h
+LICENSE
+Makefile.PL
+MANIFEST
+MANIFEST.SKIP
 maps
+META.yml			Module meta-data in YAML
 perl-Gnome2.spec.in
+README
 t/Gnome.t
 t/GnomeApp.t
 t/GnomeAppBar.t
@@ -26,8 +25,8 @@ t/GnomeDruid.t
 t/GnomeEntry.t
 t/GnomeFileEntry.t
 t/GnomeFontPicker.t
-t/GnomeHRef.t
 t/GnomeHelp
+t/GnomeHRef.t
 t/GnomeI18N.t
 t/GnomeIconEntry.t
 t/GnomeIconList.t
@@ -42,6 +41,7 @@ t/GnomeScores.t
 t/GnomeThumbnail.t
 t/GnomeURL
 t/GnomeUtil.t
+TODO
 xs/BonoboDock.xs
 xs/BonoboDockItem.xs
 xs/Gnome2.xs
@@ -60,10 +60,11 @@ xs/GnomeEntry.xs
 xs/GnomeFileEntry.xs
 xs/GnomeFontPicker.xs
 xs/GnomeGConf.xs
-xs/GnomeHRef.xs
 xs/GnomeHelp.xs
+xs/GnomeHRef.xs
 xs/GnomeI18N.xs
 xs/GnomeIconEntry.xs
+xs/GnomeIconItem.xs
 xs/GnomeIconList.xs
 xs/GnomeIconLookup.xs
 xs/GnomeIconSelection.xs
