@@ -1,3 +1,9 @@
+2003/11/30 14:48 (+0100) kaffeetisch
+
+	A xs/GnomeIconTextItem.xs
+	* t/GnomeIconList.t
+	* MANIFEST: Initial implementation and test for GnomeIconTextItem.
+
 2003/11/29 17:01 (+0100) kaffeetisch
 
 	* gnome2perl.h: Include bonobo/bonobo-dock.h and
